RESOLVED FIXED212985
[Cocoa] Element Send Keys can hang when an automation window becomes unfocused
https://bugs.webkit.org/show_bug.cgi?id=212985
Summary [Cocoa] Element Send Keys can hang when an automation window becomes unfocused
Blaze Burg
Reported 2020-06-09 12:51:20 PDT
.
Attachments
Patch (2.03 KB, patch)
2020-06-09 12:54 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2020-06-09 12:52:04 PDT
Blaze Burg
Comment 2 2020-06-09 12:54:31 PDT
Devin Rousso
Comment 3 2020-06-09 14:58:04 PDT
Comment on attachment 401464 [details] Patch rs=me
EWS
Comment 4 2020-06-09 15:06:10 PDT
Committed r262815: <https://trac.webkit.org/changeset/262815> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401464 [details].
Note You need to log in before you can comment on or make changes to this bug.