[Cocoa] Element Send Keys can hang when an automation window becomes unfocused https://bugs.webkit.org/show_bug.cgi?id=212985 <rdar://problem/56354471>

Reviewed by Devin Rousso.

* UIProcess/Automation/mac/WebAutomationSessionMac.mm:
(WebKit::WebAutomationSession::sendSynthesizedEventsToPage):
Make sure to focus the window and set first responder so sending keys doesn't hang.


Canonical link: https://commits.webkit.org/225792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262815 268f45cc-cd09-0410-ab3c-d52691b4dbfc